--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather app - week5</title>
+    <title>Weather app</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -143,6 +143,17 @@
         </div>
       </div>
     </div>
+
+    <p>
+      <a
+        href="https://github.com/ivasiget/pro-homework-week5"
+        class="linkGithub"
+        target="blank"
+      >
+        Open-source code</a
+      >
+      by Siget Iva.
+    </p>
   </body>
   <script src="sources/index.js"></script>
 </html>
